passport-local and trailing whitespaces

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "passport": "~0.1.17",
     "passport-facebook": "~0.1.5",
     "passport-twitter": "~0.1.5",
+    "passport-local": "~0.1.5",
     "component-type": "component/type"
   },
   "engines": {
