Thumbnail functionality with easyimage

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "passport-local": "~0.1.5",
     "component-type": "component/type",
     "webrtc.io": "latest",
-    "webrtc.io-client": "latest"
+    "webrtc.io-client": "latest",
+    "easyimage": "latest"
   },
   "engines": {
     "node": ">= 0.8.0",
