--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "passport": "~0.1.17",
     "passport-facebook": "~0.1.5",
     "passport-twitter": "~0.1.5",
+    "passport-google-oauth" : "0.1.5",
     "passport-local": "~0.1.5",
-    "component-type": "component/type",
+    "type-component": "0.0.1",
     "webrtc.io": "latest",
     "webrtc.io-client": "latest",
     "easyimage": "latest"
